fix: validate request params
